# meshletmaker

./: .gitignore  CMakeLists.txt  LICENSE  NOTICE.md  README.md  vcpkg.json
Standalone/: CMakeLists.txt  main.cpp
core/: geometryProcessing.cpp  geometryProcessing.h  idxBufCleaner.cpp  meshletConverter.cpp  meshletMaker.h  meshletMeshDescriptor.cpp  meshlet_builder.hpp  meshlet_util.hpp  mm_meshlet_builder.h  mm_structures.h  settings.h  volumeProcessing.cpp
libs/tinyobjloader/: LICENSE
